Fix dropdown toggle for dark-theme
The dropdown toggle was not being correctly rendered as a downward
arrow due to the override for border-color.  The margin-top was
also too high for dark theme so is reset to 0.

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -95,7 +95,7 @@
 }
 
 .darkmode .dropdown-toggle:after {
-    border-color: #FFF;
+    margin-top: 0;
 }
 
 .darkmode .dropdown-menu {
